--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,12 +21,12 @@
   {% if page.cover-img or page.title %}
   <div class="container-md">
     <div class="row">
-      <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
+      <div class="col-xl-10 offset-xl-1 col-lg-12"> 
         <div class="{{ include.type }}-heading">
           <h1>{% if page.title %}{{ page.title | strip_html }}{% else %}<br/>{% endif %}</h1>
           {% if page.subtitle %}
             {% if include.type == "page" %}
-              <hr class="small">
+              <hr class="small">               
               <span class="{{ include.type }}-subheading">{{ page.subtitle | strip_html }}</span>
             {% else %}
               <h2 class="{{ include.type }}-subheading">{{ page.subtitle | strip_html }}</h2>
@@ -42,11 +42,19 @@
               <span class="post-meta">
                 <span class="d-none d-md-inline middot">&middot;</span>
                 Last updated {{ page.last-updated | date: date_format }}
-              </span>
+              </span>      
             {% endif %}
             {% if page.readtime %}
               {% include readtime.html %}
-            {% endif %}
+            {% endif %}  
+            {% if page.tags.size > 0 %}
+            <div>
+            {% for tag in page.tags %}
+              
+              <a class="text-white badge-danger p-1" href="{{ '/tags' | relative_url }}#{{- tag -}}">{{- tag -}}</a>
+            {% endfor %}
+          </div>            
+            {% endif %}                      
           {% endif %}
         </div>
       </div>
