--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -27,7 +27,7 @@ layout: base
                   <iframe src="https://ghbtns.com/github-btn.html?user={{ gh_user }}&type=follow&count=true" frameborder="0" scrolling="0" width="220px" height="20px"></iframe>
               {% endcase %}
             {% endfor %}
-          {% endif %}
+          {% endif %}       
         </div>
       {% endif %}
 
@@ -64,6 +64,36 @@ layout: base
         {% include social-share.html %}
       {% endif %}
 
+      <h2 class="articles-header">More Articles</h2>
+      <ul class="articles-list">
+        {% for post in site.related_posts %}
+          {%- capture thumbnail -%}
+            {% if post.thumbnail-img %}
+              {{ post.thumbnail-img }}
+            {% elsif post.cover-img %}
+              {% if post.cover-img.first %}
+                {{ post.cover-img[0].first.first }}
+              {% else %}
+                {{ post.cover-img }}
+              {% endif %}
+            {% endif %}
+          {% endcapture %}
+          {% assign thumbnail = thumbnail | strip %}
+          <li class="article-item">
+            <div class="article-content">
+              <a href="{{ post.url }}" class="article-link">{{ post.title }}</a>
+            </div>
+            {% if thumbnail != "" %}
+              <div class="article-thumbnail">
+                <a href="{{ post.url | absolute_url }}" aria-label="Thumbnail">
+                  <img src="{{ thumbnail | absolute_url }}" alt="Post thumbnail">
+                </a>
+              </div>
+            {% endif %}
+          </li>
+        {% endfor %}
+      </ul>           
+
       <ul class="pagination blog-pager">
         {% if page.previous.url %}
         <li class="page-item previous">
@@ -72,7 +102,8 @@ layout: base
             <span class="d-none d-sm-inline-block">Previous Post</span>
           </a>
         </li>
-        {% endif %}
+        {% endif %}     
+
         {% if page.next.url %}
         <li class="page-item next">
           <a class="page-link" href="{{ page.next.url | relative_url }}" data-toggle="tooltip" data-placement="top" title="{{page.next.title | strip_html | xml_escape}}">
