--- a/_includes/header.html
+++ b/_includes/header.html
@@ -23,7 +23,15 @@
     <div class="row">
       <div class="col-xl-10 offset-xl-1 col-lg-12"> 
         <div class="{{ include.type }}-heading">
-          <h1>{% if page.title %}{{ page.title | strip_html }}{% else %}<br/>{% endif %}</h1>
+          <h1>
+            {% if page.url == "/" or page.url == "/index.html" %}
+              {{ page.indexTitle | strip_html }}
+            {% elsif page.title %}
+              {{ page.title | strip_html }}
+            {% else %}
+              <br/>
+            {% endif %}
+          </h1>          
           {% if page.subtitle %}
             {% if include.type == "page" %}
               <hr class="small">               
