--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -292,7 +292,7 @@ img {
   background-color: var(--navbar-col);
   text-decoration: none !important;
   font-weight: normal;
-  color: var(--navbar-text-col);
+  color: var(--navbar-border-col);
   {% unless site.navbar-var-length %}
   white-space: normal;
   {% endunless %}
