--- a/_includes/head.html
+++ b/_includes/head.html
@@ -55,7 +55,7 @@
   {% endif %}
 
   {% if site.rss-description %}
-  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | absolute_url }}">
+  <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ '/feed.xml' | absolute_url | replace: 'http://', 'https://' }}">
   {% endif %}
 
   {% include gtag.html %}
@@ -123,7 +123,7 @@
   <meta property="og:description" content="{{ description }}">
 
   {% if img != "" %}
-  <meta property="og:image" content="{{ img | absolute_url }}">
+  <meta property="og:image" content="{{ img | absolute_url | replace: 'http://', 'https://' }}">
   {% endif %}
 
   {% if page.id %}
@@ -132,12 +132,12 @@
   <meta property="og:article:author" content="{{ author }}">
   {% endif %}
   <meta property="og:article:published_time" content="{{ page.date | date_to_xmlschema }}">
-  <meta property="og:url" content="{{ page.url | absolute_url }}">
-  <link rel="canonical" href="{{ page.url | absolute_url }}">
+  <meta property="og:url" content="{{ page.url | absolute_url | replace: 'http://', 'https://' }}">
+  <link rel="canonical" href="{{ page.url | absolute_url | replace: 'http://', 'https://' }}">
   {% else %}
   <meta property="og:type" content="website">
-  <meta property="og:url" content="{{ page.url | absolute_url | strip_index }}">
-  <link rel="canonical" href="{{ page.url | absolute_url | strip_index }}">
+  <meta property="og:url" content="{{ page.url | absolute_url | replace: 'http://', 'https://' | strip_index }}">
+  <link rel="canonical" href="{{ page.url | absolute_url | replace: 'http://', 'https://' | strip_index }}">
   {% endif %}
 
   {% if img != "" and img != site.avatar %}
@@ -152,7 +152,7 @@
   <meta property="twitter:description" content="{{ description }}">
 
   {% if img != "" %}
-  <meta name="twitter:image" content="{{ img | absolute_url }}">
+  <meta name="twitter:image" content="{{ img | absolute_url | replace: 'http://', 'https://' }}">
   {% endif %}
 
   {% include matomo.html %}
