--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -37,7 +37,7 @@ body {
   position: relative;
   background-color: var(--page-col);
   {% if site.page-img %}
-  background-image: url({{ site.page-img | relative_url | replace: 'http://', 'https://' }});
+  background-image: url({{ site.page-img | relative_url  }});
   background-attachment: fixed;
   {% endif %}
   overflow-wrap: break-word;
@@ -156,7 +156,7 @@ img {
   border-bottom: 1px solid var(--navbar-border-col);
   font-family: var(--header-font);
   {% if site.navbar-img %}
-    background-image: url({{ site.navbar-img | relative_url | replace: 'http://', 'https://'}});
+    background-image: url({{ site.navbar-img | relative_url }});
     background-attachment: fixed;
   {% endif %}
   -webkit-transition: padding .5s ease-in-out;
@@ -417,7 +417,7 @@ footer {
   font-size: 0.875rem;
   background-color: var(--footer-col);
   {% if site.footer-img %}
-    background-image: url({{ site.footer-img | relative_url | replace: 'http://', 'https://'}});
+    background-image: url({{ site.footer-img | relative_url }});
     background-attachment: fixed;
   {% endif %}
 }
