--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -86,3 +86,11 @@ iframe {
   height:auto;
   width: 100% !important;
 }
+
+#table-of-contents{
+background-color: #fff;
+margin: 5px 0;
+padding: 10px 30px;
+border: 1px solid #e8e8e8;
+border-radius: 3px;
+}
