--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+<button id="scrollToTop" style="display: none; position: fixed; bottom: 20px; right: 20px; z-index: 1000;">△</button>
 <footer>
   <div class="container-md beautiful-jekyll-footer">
     <div class="row">
