--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -87,14 +87,47 @@ iframe {
   width: 100% !important;
 }
 
-#table-of-contents{
-background-color: #fff;
-margin: 5px 0;
-padding: 10px 30px;
-border: 1px solid #e8e8e8;
-border-radius: 3px;
+#toc-container {
+  position: sticky;
+  top: 50px; /* Adjust to #main-navbar height */
+  z-index: 1;
+  width: 250px; /* Adjust width */
+  border: 1px solid #e8e8e8;
+  border-radius: 3px;  
+  background-color: white;
+  width:100%;
 }
 
+#toc h2{
+  margin-top:0.5rem
+}
+
+#toc {
+  width:100%;
+  padding-left:10px;
+  overflow: hidden;
+  transition: max-height 0.5s ease-in-out;
+  max-height: 100vh; /* Default expanded height */
+}
+
+#toc.collapsed {
+  max-height: calc(1.5em + 25px); /* Approximate h2 height */
+  }
+
+#toc.collapsed::after {  
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  font-size: 12px;
+  content: "+"; /* Down arrow */
+  }
+
+  #toc a.active {
+    color: blue; /* Change color to indicate active */
+    font-weight: bold;
+  }
+  
 .toc-depth-1 {
   list-style-type: disc; /* Default disc for level 1 */
 }
