--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -112,6 +112,9 @@ iframe {
 
 #toc.collapsed {
   max-height: calc(1.5em + 25px); /* Approximate h2 height */
+  position:absolute;
+  background-color:white;
+  width:100%;
   }
 
 #toc a{
