--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -95,6 +95,14 @@ layout: page
       </div>
       {% endif %}
 
+      {% assign word_count = post.content | strip_html | replace: "\n", " " | split: " " | size %}
+      {% assign reading_time = word_count | divided_by: site.reading_speed | ceil %}      
+      
+      <div>
+        <p><strong>{{ reading_time }} menit bacaan</p></strong>
+      </div>
+      
+
     </article>
   </li>
   {% endfor %}
