luther on virgin mary

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -64,13 +64,13 @@
           </div>            
             {% endif %}                      
           {% endif %}
-
+          {% if include.type == "post"  %}
           {% assign word_count = content | strip_html | replace: "\n", " " | split: " " | size %}
-          {% assign reading_time = word_count | divided_by: site.reading_speed | ceil %}      
-          
-          <div>
+          {% assign reading_time = word_count | divided_by: site.reading_speed | ceil %}
+          <div>     
             <p><strong>{{ reading_time }} menit bacaan</strong></p>
-          </div>             
+          </div>  
+          {% endif %}           
         </div>
       </div>
     </div>
