--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -84,6 +84,8 @@ a:focus {
 blockquote {
   color: var(--mid-col);
   font-style: italic;
+  border-left: 5px solid rgba(0,0,0,.1);
+  padding-left: 1.5em;
 }
 blockquote p:first-child {
   margin-top: 0;
