apakah hanya alkitab sumber iman kita update

--- a/assets/css/custom-styles.css
+++ b/assets/css/custom-styles.css
@@ -62,7 +62,7 @@
 
   .page-subheading{
     color:var(--hover-col);
-    font-weight: bold !important;
+    font-weight: bolder !important;
   }
 
   #search-results-container a{
