--- a/_includes/header.html
+++ b/_includes/header.html
@@ -66,7 +66,7 @@
           {% endif %}
           {% if include.type == "post"  %}
           {% assign word_count = content | strip_html | replace: "\n", " " | split: " " | size %}
-          {% assign reading_time = word_count | divided_by: site.reading_speed | ceil %}
+          {% assign reading_time = word_count | divided_by: site.reading_speed | ceil | plus: 1 %}
           <div>     
             <p><strong>{{ reading_time }} menit bacaan</strong></p>
           </div>  
